# retrieva

./: .gitignore  Dockerfile  README.md  docker-compose.yml  evals.py  main.py  pyproject.toml  retrieva_configs.json
app/: app.py  config.toml  main.py  utils.py
app/components/: chat.py  uploader.py
app/ui/: config_helpers.py  modals.py  sidebar.py  state.py
app/views/: chat.py  documents.py  files.py  map.py  models.py  projection.py
core/: gpu_manager.py  models.py  pyproject.toml  rag.py
core/embedding/: base_embedder.py  embedder.py  local_embedder.py  openai_embedder.py  sentence_transformer_embedder.py
core/embeddings/: base_embedding_model.py
core/ingestion/: base_ingestor.py  chunker.py  document_ingestor.py  file_ingestor.py  image_captioner.py  ingestor.py  models.py
core/ingestion/processor/: audio_processor.py  base_file_processor.py  document_processor.py  image_processor.py  pdf_processor.py  text_processor.py
core/model/: chunk.py
core/retrieval/: base_retriever.py  bm25_retriever.py  dense_retriever.py  hybrid_retriever.py  llm.py  qdrant_retriever.py  reranker.py  reranking_retriever.py  retriever.py
core/retrieval/reranking/: base_reranker.py  cross_encorer_reranker.py
core/storage/: base_vector_store.py  faiss_vector_store.py  object_storage.py  qdrant_vector_store.py  storage_manager.py  vector_storage.py
core/vectorstore/: faiss_vector_store.py
data/raw/git_docs/: add.txt  branch.txt  checkout.txt  clone.txt  commit.txt  log.txt  pull.txt  push.txt  restore.txt  status.txt
data/vectorstore/: faiss.index  faiss.index.meta.pkl
infrastructure/: docker-compose.yml
infrastructure/db/: 01-init-pgvector.sql
notebooks/: audio_classification.ipynb  audio_classification_old.ipynb  evaluation.ipynb  text_classification_old.ipynb
notebooks/evaluation/: evaluation.ipynb  evaluation_audio.ipynb  evaluation_image.ipynb  evaluation_text.ipynb  plot.py  ragas_abstractive_v1.csv  ragas_abstractive_v1_summary.txt  ragas_audio_baseline_details.csv  ragas_audio_baseline_means.csv  ragas_audio_details.csv  ragas_audio_means.csv  ragas_extractive_v1.csv  ragas_pre-baseline-1_means.csv  ragas_pre-baseline-2_means.csv  ragas_pre-baseline_details.csv  ragas_pre-baseline_means.csv  ragas_ragas_image_details.csv  ragas_ragas_image_means.csv
notebooks/evaluation/old/: final_metrics_summary.txt  ragas_abstractive_v1_summary.txt  ragas_extractive_v1_summary.txt  ragas_full_81_evaluation.csv
notebooks/evaluation/results/: ragas_fixed_details.csv  ragas_fixed_means.csv  ragas_hybrid_details.csv  ragas_hybrid_means.csv  ragas_large_details.csv  ragas_large_means.csv  ragas_mxbai_details.csv  ragas_mxbai_means.csv  ragas_nomic_details.csv  ragas_nomic_means.csv  ragas_pre-baseline-1_details.csv  ragas_pre-baseline-2_details.csv  ragas_pre-baseline-3_details.csv  ragas_pre-baseline-3_means.csv  ragas_qwen_details.csv  ragas_qwen_means.csv  ragas_reranker_details.csv  ragas_small_means.csv  (+8 more)
notebooks/practical/: evaluation_practical.ipynb
notebooks/test/: evaluation_practical.ipynb
notebooks/testing/: testing.ipynb
retrieva.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: 00_demo_rag.py  01_fetch_wiki.py  02_generate_queries.py  03_verification.py  fetch_audio_from_youtube.py  git_docs.sh  paths.py  qdrant_setup.py
