[project]
name = "retrieva"
version = "0.1.0"
description = "RAG pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.18",
    "langchain-openai>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.4",
    "openai>=2.36.0",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
py-modules = []

[tool.uv]
managed = true



