[project]
name = "retrieva"
version = "0.1.0"
description = "RAG pipeline"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "core",
    "faster-whisper>=1.2.1",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.18",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.4",
    "ollama>=0.6.2",
    "openai>=2.36.0",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-slugify>=8.0.4",
    "qdrant-client>=1.17.1",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "tqdm>=4.67.3",
    "yt-dlp>=2026.3.17",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["core", "app"]

[tool.uv]
managed = true

[tool.uv.sources]
core = { path = "core", editable = true }
